# libaes_siv

./: .gitignore  AES_SIV_CTX_new.adoc  AES_SIV_Encrypt.adoc  AES_SIV_Init.adoc  CMakeLists.txt  Makefile  README.md  RELEASE-CHECKLIST  aes_siv.c  aes_siv.h  aes_siv_test.c  bench.c  config.h.in  demo.c  shell.nix  test-ct.c  tests.c
